tests/typing/good/testfile-variance-8.scala

class List[+T] { def foo(x: List[String]) : List[Any] = x }
object Main { def main(args: Array[String]) { } }
