tests/typing/bad/testfile-variance-12.scala

class List[+T] { }
class Foo[+U] { var l: List[U] = null }
object Main { def main(args: Array[String]) { } }
